2007-01-12  Tomas Cerha  <cerha@brailcom.org>

	* pytis/presentation/spec.py (Action.__init__): Docstring typo fix.

	* pytis/presentation/field.py (PresentedRow._init_row): Fixed bug
	in prefill initialization.

2007-01-11  Tomas Cerha  <cerha@brailcom.org>

	* pytis/form/dualform.py (DualForm.select_row): Pass the return
	value of the main form's method.

	* pytis/form/list.py (ListForm._select_row): Return `True' on
	success, `False' otherwise.
	(ListForm.select_row): Pass the return value of the
	parent class's method. 

	* pytis/form/form.py (RecordForm._on_new_record): Don't run
	callback `CALL_NEW_RECORD'.
	(RecordForm.select_row): Return `True' on success, `False' otherwise.
	(EditForm._select_row): Return `True'.
	(BrowsableShowForm._select_row): Pass the return value of the
	parent class's method.

2007-01-09  Tomas Cerha  <cerha@brailcom.org>

	* pytis/form/form.py (RecordForm._init_attributes): Docstring
	updated.

	* pytis/presentation/field.py (PresentedRow._init_row): Create a
	copy of the `prefill' dict with all values as new
	`pytis.data.Value' instances.  Use the same values regardless if
	`row' was None or not.
	(PresentedRow.__init__): Docstring updated.

2007-01-05  Tomas Cerha  <cerha@brailcom.org>

	* pytis/presentation/field.py (PresentedRow.display): Try to use
	columns own display prior to using CbComputer's display.

	* pytis/form/inputfield.py (InputField._on_set_focus): Validate
	last focused field only if it has the same parent -- is from the
	same form.
	(CodebookField._on_codebook_insert): Use `new_record' instead of
	`run_form'.

2007-01-04  Tomas Cerha  <cerha@brailcom.org>

	* pytis/form/application.py (Application._cmd_run_form): Removed
	hack for backwards compatibility of arguments.

2007-01-03  Tomas Cerha  <cerha@brailcom.org>

	* pytis/presentation/spec.py (FieldSpec.__init__): New argument
	`nocopy'.
	(FieldSpec.nocopy): New method.

	* pytis/form/form.py (RecordForm._row_copy_prefill): Also exclude